# Battleship-Royale

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  TEST.md
assets/: tuiconcept.md
assets/UML/: Server.xmi
assets/flags/: pdcurses
documentation/def/: doxygen.def
documentation/docbook/: _battleship_royale_8h.xml  _battleship_royale_8h__dep__incl.md5  _client_8h.xml  _d_b_8cpp.xml  _d_b_8cpp__incl.md5  _d_b_8h.xml  _d_b_8h__dep__incl.md5  _regex_8h.xml  annotated.xml  asio_2regex_2regex_8cpp.xml  asio_2server_2_server_8cpp.xml  asio_2server_2_server_8h.xml  asio_2server_2con__handler_8cpp.xml  asio_2server_2con__handler_8cpp__incl.md5  asio_2server_2con__handler_8h.xml  asio_2server_2con__handler_8h__dep__incl.md5  asio_2server_2con__handler_8h__incl.md5  async_8cpp.xml  async_8cpp__incl.md5  class_d_b.xml  class_message.xml  class_message_object.xml  class_server.xml  class_server_link.xml  classcon__handler.xml  classcon__handler__inherit__graph.md5  client_2src_2_battleship_royale_8cpp.xml  client_2src_2_battleship_royale_8cpp__incl.md5  client_2src_2_message_8h.xml  client_8cpp.xml  dir_075bb3ff235063c77951cd176d15a741.xml  dir_16a916fe4812f76ff8ca083dfa2c5cc7.xml  dir_22525a050dfdcab83cc3ff7d62dce0a1.xml  dir_4db07c9d7f8d5a8284ae701bfea002b8.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_6908ff505388a07996d238c763adbdab.xml  dir_78ce3fde11f1c50580f2f2c408f37c2f.xml  dir_aec46070e25e2e5fb0789c4048a4272f.xml  dir_c8b6e6fef5b1d9ca37c74a370526293f.xml  dir_ca44e6cd34c92977c243b2139948fc00.xml  (+45 more)
documentation/html/: _args_8cpp.html  _args_8cpp.js  _args_8cpp__incl.map  _args_8cpp__incl.md5  _args_8cpp_source.html  _args_8h.html  _args_8h.js  _args_8h__dep__incl.map  _args_8h__dep__incl.md5  _args_8h__incl.map  _args_8h__incl.md5  _args_8h_source.html  _battleship_royale_2_battleship_royale_2_console_8h.html  _battleship_royale_2_battleship_royale_2_console_8h.js  _battleship_royale_2_battleship_royale_2_console_8h__dep__incl.map  _battleship_royale_2_battleship_royale_2_console_8h__dep__incl.md5  _battleship_royale_2_battleship_royale_2_console_8h_source.html  _battleship_royale_2_battleship_royale_2_regex_8h.html  _battleship_royale_2_battleship_royale_2_regex_8h.js  _battleship_royale_2_battleship_royale_2_regex_8h__dep__incl.map  _battleship_royale_2_battleship_royale_2_regex_8h__dep__incl.md5  _battleship_royale_2_battleship_royale_2_regex_8h_source.html  _battleship_royale_8h.html  _battleship_royale_8h.js  _battleship_royale_8h__dep__incl.map  _battleship_royale_8h__dep__incl.md5  _battleship_royale_8h__incl.map  _battleship_royale_8h__incl.md5  _battleship_royale_8h_source.html  _check_8h.html  _check_8h__dep__incl.map  _check_8h__dep__incl.md5  _check_8h__incl.map  _check_8h__incl.md5  _check_8h_source.html  _client_8h.html  _client_8h.js  _client_8h__incl.map  _client_8h__incl.md5  _client_8h_source.html  (+883 more)
documentation/latex/: _battleship_royale_8h.tex  _battleship_royale_8h__dep__incl.md5  _client_8h.tex  _client_8h__incl.md5  _d_b_8cpp.tex  _d_b_8cpp__incl.md5  _d_b_8h.tex  _d_b_8h__dep__incl.md5  _d_b_8h__incl.md5  _regex_8h.tex  _regex_8h__dep__incl.md5  _regex_8h__incl.md5  annotated.tex  asio_2regex_2regex_8cpp.tex  asio_2regex_2regex_8cpp__incl.md5  asio_2server_2_server_8cpp.tex  asio_2server_2_server_8cpp__incl.md5  asio_2server_2_server_8h.tex  asio_2server_2_server_8h__dep__incl.md5  asio_2server_2_server_8h__incl.md5  asio_2server_2con__handler_8cpp.tex  asio_2server_2con__handler_8cpp__incl.md5  asio_2server_2con__handler_8h.tex  asio_2server_2con__handler_8h__dep__incl.md5  async_8cpp.tex  async_8cpp__incl.md5  class_d_b.tex  class_message.tex  class_message_object.tex  class_server.tex  class_server_link.tex  class_server_link__coll__graph.md5  class_server_link__inherit__graph.md5  classcon__handler.tex  classcon__handler__coll__graph.md5  classcon__handler__inherit__graph.md5  client_2src_2_battleship_royale_8cpp.tex  client_2src_2_battleship_royale_8cpp__incl.md5  client_2src_2_message_8h.tex  client_2src_2_message_8h__incl.md5  (+66 more)
documentation/rtf/: _battleship_royale_8h__dep__incl.md5  _client_8h__incl.md5  _d_b_8cpp__incl.md5  _d_b_8h__dep__incl.md5  _d_b_8h__incl.md5  _regex_8h__dep__incl.md5  asio_2regex_2regex_8cpp__incl.md5  (+25 more)
manual/: install_linux.md  install_windows.md
src/asio/: CMakeLists.txt  Server.cpp  Server.h  async.cpp  async_server.cpp  async_server.h  con_handler.cpp  con_handler.h
src/asio/client/: client.cpp
src/asio/newclient/: CMakeLists.txt
src/asio/newserver/: CMakeLists.txt
src/asio/regex/: CMakeLists.txt  regex.cpp
src/asio/server/: async.cpp  con_handler.cpp
src/client/: BattleshipRoyale.cpp  CMakeLists.txt  Client.cpp  Client.h  Registration.cpp  Registration.h
src/client/src/: Args.cpp  Args.h  BattleshipRoyale.cpp  Client.cpp  Client.h  Registration.cpp  Registration.h  TUI.cpp  TUI.h  Test.h  Window.cpp  Window.h
src/client/src/test/: LoopConnections.cpp  LoopConnections.h  SimultaneousConnections.cpp  SimultaneousConnections.h
src/client_curses/: .BattleshipRoyale.cpp.swp  BattleshipRoyale.cpp  CMakeLists.txt
src/opportunity_check/memorydb/: CMakeLists.txt  mem.cpp
src/opportunity_check/regex/: CMakeLists.txt  regex.cpp
src/opportunity_check/server/: CMakeLists.txt  Server.h  con_handler.h
src/server/: BattleshipRoyale.cpp  BattleshipRoyale.h  CMakeLists.txt  DB.cpp  DB.h  Db.cpp  Db.h  MainCycle.cpp  MainCycle.h  Map.cpp  Map.h  Player.cpp  Player.h  Regex.cpp  Regex.h  Server.h  UID.cpp  con_handler.cpp
src/server/src/: BattleshipRoyale.cpp  Check.h  Console.cpp  Console.h  DB.cpp  DB.h  MemDBmap.cpp  MemDBmap.h  MemDBuid.cpp  MemDBuid.h  Message.h  MiniDB.cpp  MiniDB.h  Processing.cpp  Processing.h  Regex.cpp  Regex.h  Server.cpp  Server.h  con_handler.cpp  con_handler.h  rand_sse.cpp  rand_sse.h
src/server/src/check/: OpenMP.cpp  OpenMP.h
src/testing/client/: CMakeLists.txt
src/testing/console/: CMakeLists.txt  Console.cpp
src/testing/minidb/: CMakeLists.txt  MiniDB.cpp  MiniDB.h  test.cpp
src/testing/spdlog/: CMakeLists.txt
src/testing/translation/: CMakeLists.txt
(+257 files in other folders)
